Changed so that clients doesn't wait for each message to be processed before sending next